2015-04-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* app.yaml: renamed to tuvero-issue
	urls updated to be on the first level
	require admin and ssl for settings change
	serving css/ subdirectory statically

	* boulesdb.py: moved to main.py

	* main.py: playerdb code removed
	issue code retained
	paths adjusted (/ and /settings)

	* css/issue.css: project-specific formatting

	* css/primer.css: see http://primercss.io/

2015-02-27	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* boulesdb.py: Boules -> Tuvero

	* github.py: boules -> tuvero

2014-12-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* github.py: github gist/issue API added
	hasPushAccess() added for easy token validation
	url -> html_url. Users don't need the API URL

	* boulesdb.py: POST-based issue creation written
	possibility for storing and setting the github access token added
	dereferencing mistake fixed